src/test/deca/syntax/invalid/added/accollade_manquante.deca
// Description:
//    Programme créant mal le main.
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe.
//    le lexer ne doit pas relever d'erreur
//
// Historique:
//    cree le 21/12/2024


{
